fixed z-index of header burger menu so it appears above my scratch cards

--- a/resources/scss/layout/_header.scss
+++ b/resources/scss/layout/_header.scss
@@ -32,7 +32,7 @@ header {
     width: fit-content;
     background-color: #333;
     padding: 10px;
-    z-index: 1;
+    z-index: 3;
 
     .nav {
       ul {
